; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_xmit.c_ar5210GetTxDescLink.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_xmit.c_ar5210GetTxDescLink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }
%struct.ar5210_desc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar5210GetTxDescLink(%struct.ath_hal* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.ath_hal*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ar5210_desc*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call %struct.ar5210_desc* @AR5210DESC(i8* %8)
  store %struct.ar5210_desc* %9, %struct.ar5210_desc** %7, align 8
  %10 = load %struct.ar5210_desc*, %struct.ar5210_desc** %7, align 8
  %11 = getelementptr inbounds %struct.ar5210_desc, %struct.ar5210_desc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %6, align 8
  store i32 %12, i32* %13, align 4
  ret void
}

declare dso_local %struct.ar5210_desc* @AR5210DESC(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
